feat: add SearchInput and handle keyword param
