# openapi/api.yaml
@@ -80,6 +80,12 @@ paths:
             type: string
           required: false
           description: Number of items per page
+        - in: query
+          name: keyword
+          schema:
+            type: string
+          required: false
+          description: Keyword to search in events
       responses:
         "200":
           description: A list of events
